[package]
name = "jaz"
version = "0.0.3"
authors = ["John Naylor <jonaylor89@gmail.com>", "Zephyr Headley <headleyjz@vcu.edu>"]
edition = "2021"
description = "Find secrets hidden in commits"
repository = "https://github.com/jonaylor89/JAZ"
license = "MIT"
readme = "README.md"
exclude = [
  "assets/*"
]

[dependencies]
git2 = "0.16" 
once_cell = "1.8.0"
regex = "1.5.4"

[package.metadata.arch]
arch = ["x86_64"]
