[package]
name = "jaz"
version = "0.0.7"
authors = ["Johannes Naylor <jonaylor89@gmail.com>", "Zephyr Headley <headleyjz@vcu.edu>"]
edition = "2021"
description = "Find secrets hidden in commits"
repository = "https://github.com/jonaylor89/JAZ"
license = "MIT"
readme = "README.md"
exclude = [
  "assets/*"
]

[dependencies]
git2 = "0.20" 
once_cell = "1.8.0"
regex = "1.5.5"

[package.metadata.arch]
arch = ["x86_64"]
